--- a/MyTestProject/Base.lproj/Main.storyboard
+++ b/MyTestProject/Base.lproj/Main.storyboard
@@ -38,19 +38,27 @@
                                     <action selector="onTestButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BtA-SK-vEz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GIJ-AY-3mF">
+                                <rect key="frame" x="175" y="611" width="64" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="try AR"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="GIJ-AY-3mF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="94y-xZ-8wm"/>
                             <constraint firstItem="s03-Dq-QAB" firstAttribute="top" secondItem="Ubi-W3-i5b" secondAttribute="bottom" constant="25" id="OvZ-Qi-hrF"/>
                             <constraint firstItem="Qmm-xi-YuG" firstAttribute="top" secondItem="s03-Dq-QAB" secondAttribute="bottom" constant="30.5" id="R8Q-vj-z0J"/>
                             <constraint firstItem="Qmm-xi-YuG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="TWC-bh-r0I"/>
+                            <constraint firstItem="GIJ-AY-3mF" firstAttribute="top" secondItem="Qmm-xi-YuG" secondAttribute="bottom" constant="30" id="Um8-ee-hl4"/>
                             <constraint firstItem="Ubi-W3-i5b" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XcT-eZ-aS4"/>
                             <constraint firstItem="s03-Dq-QAB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="u6z-Nq-Ici"/>
                             <constraint firstItem="Ubi-W3-i5b" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="uAB-fK-z5P"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="arButton" destination="GIJ-AY-3mF" id="tbR-Fa-d63"/>
                         <outlet property="mainLabel" destination="Ubi-W3-i5b" id="bBa-ei-FaN"/>
                         <outlet property="pushButton" destination="s03-Dq-QAB" id="BDr-2n-GpR"/>
                         <outlet property="testButton" destination="Qmm-xi-YuG" id="FLq-eS-gsK"/>
@@ -59,6 +67,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="20" y="84"/>
+        </scene>
+        <!--ARView Controller-->
+        <scene sceneID="SOR-dK-lrj">
+            <objects>
+                <viewController storyboardIdentifier="ARViewController" id="qZV-ay-7mw" userLabel="ARView Controller" customClass="ARViewController" customModule="MyTestProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1Qi-Ob-V5A">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="11I-CT-Jhv"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jss-Cg-NIZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="854" y="84"/>
         </scene>
     </scenes>
     <resources>
