--- a/MyTestProject/Base.lproj/Main.storyboard
+++ b/MyTestProject/Base.lproj/Main.storyboard
@@ -30,11 +30,21 @@
                                     <action selector="onPushButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ztb-Si-pTi"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qmm-xi-YuG">
+                                <rect key="frame" x="182.5" y="550" width="49" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="test"/>
+                                <connections>
+                                    <action selector="onTestButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BtA-SK-vEz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="s03-Dq-QAB" firstAttribute="top" secondItem="Ubi-W3-i5b" secondAttribute="bottom" constant="25" id="OvZ-Qi-hrF"/>
+                            <constraint firstItem="Qmm-xi-YuG" firstAttribute="top" secondItem="s03-Dq-QAB" secondAttribute="bottom" constant="30.5" id="R8Q-vj-z0J"/>
+                            <constraint firstItem="Qmm-xi-YuG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="TWC-bh-r0I"/>
                             <constraint firstItem="Ubi-W3-i5b" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="XcT-eZ-aS4"/>
                             <constraint firstItem="s03-Dq-QAB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="u6z-Nq-Ici"/>
                             <constraint firstItem="Ubi-W3-i5b" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="uAB-fK-z5P"/>
@@ -43,6 +53,7 @@
                     <connections>
                         <outlet property="mainLabel" destination="Ubi-W3-i5b" id="bBa-ei-FaN"/>
                         <outlet property="pushButton" destination="s03-Dq-QAB" id="BDr-2n-GpR"/>
+                        <outlet property="testButton" destination="Qmm-xi-YuG" id="FLq-eS-gsK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
